# actions-telegram-notifier

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README-RU.MD  README.MD  action.yml  gitlab-ci.example.yml
.github/workflows/: build-and-push-action.yml  test-action.yml
src/: main.rs
src/enums/: event_enums.rs  mod.rs  workflow_enums.rs
src/implementations/: data_structure_impl.rs  event_details_impl.rs  github_event_impl.rs  gitlab_event_impl.rs  mod.rs  notify_field_impl.rs  pull_request_action_impl.rs  push_event_impl.rs  status_impl.rs
src/serializers/: mod.rs  workflow_dispatch_input_keys.rs
src/structures/: data_structure.rs  event_details.rs  event_structures.rs  mod.rs
src/structures/event_type_structures/: base_structures.rs  mod.rs  pull_request_structures.rs  push_structures.rs
src/utils/: env_utils.rs  event_message_utils.rs  mod.rs  telegram_utils.rs  text_utils.rs
src/utils/event_text_utils/: mod.rs  pull_request_review_text_utils.rs  pull_request_text_utils.rs  push_text_utils.rs  workflow_dispatch_text_utils.rs
