[package]
name = "actions-telegram-notifier"
version = "2.0.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
