[package]
name = "actions-telegram-notifier"
version = "3.0.0"
edition = "2024"

[dependencies]
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }